<resources>
    <string name="app_name">CraftBid</string>
    <string name="profile">Προφίλ</string>
    <string name="login">Σύνδεση</string>
    <string name="logout">Αποσύνδεση</string>
    <string name="signup">Εγγραφή</string>
    <string name="new_creations">Νέες Δημιουργίες</string>
    <string name="username_en">Username</string>
    <string name="password_en">Password</string>
    <string name="signup_creator">Εγγραφείτε ως Δημιουργός</string>
    <string name="signup_customer">Εγγραφείτε ως Πελάτης</string>
    <string name="continue_guest">Συνεχίστε ως επισκέπτης</string>
    <string name="fullname">Όνομα</string>
    <string name="email">Email</string>
    <string name="phone">Τηλέφωνο</string>
    <string name="cancel">Άκυρο</string>
    <string name="repeat_password">Επανάληψη Password</string>
    <string name="pass_note">*Ο κωδικός πρέπει να περιέχει τουλάχιστον έναν ειδικό χαρακτήρα</string>
    <string name="photo_profile">Φωτογραφία προφίλ</string>
    <string name="add_photo">Προσθήκη Φωτογραφίας</string>
    <string name="profile_description">Περιγραφή Προφίλ</string>
    <string name="evaluations">Αξιολογήσεις</string>
    <string name="for_static">για</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="freelancer">Freelancer</string>
    <string name="freelancer_checked">\u2713 Freelancer</string>
    <string name="see_rewards">Δείτε τα δώρα</string>
    <string name="report">Αναφορά</string>
    <string name="listings">Αγγελίες</string>
    <string name="evaluation">Αξιολόγηση</string>
    <string name="see_more">Δείτε περισσότερα</string>
    <string name="edit">Επεξεργασία</string>
    <string name="show_offers">Εμφάνιση Προσφορών</string>
    <string name="last_offer">Αρχική τιμή/ \nΤελευταία προσφορά</string>
    <string name="colon">:</string>
    <string name="by_creator">by: </string>
    <string name="location">Περιοχή: </string>
    <string name="points">Πόντοι: </string>
    <string name="rewards_by">Βραβεία του Καλλιτέχνη</string>
    <string name="num_claimed_reward_points">Έχετε %1$d πόντους για αυτόν τον καλλιτέχνη</string>
    <string name="num_points">%1$d Πόντοι</string>
    <string name="select">Επιλογή</string>
    <string name="notifications">Ειδοποιήσεις</string>
    <string name="my_rewards">Τα βραβεία μου</string>
    <string name="make_offer">Κάντε Προσφορά</string>
    <string name="offer">Προσφορά \n(σε €)</string>
    <string name="offer_note">*Πρέπει να είναι άνω των </string>
    <string name="submit_offer">Υποβολή Προσφοράς</string>
    <string name="both_ways">*ταχυδρομικά, χέρι-με-χέρι</string>
    <string name="courier">*ταχυδρομικά</string>
    <string name="hands">*χέρι-με-χέρι</string>
    <string name="new_listing">Νέα Αγγελία</string>
    <string name="title">Τίτλος</string>
    <string name="init_price_optional">Αρχική τιμή (προαιρετικό)</string>
    <string name="location_optional">Τοποθεσία (προαιρετικό)</string>
    <string name="quantity">Ποσότητα</string>
    <string name="points_optional">Πόντοι \n(προαιρετικό)</string>
    <string name="shipment">Ταχυδρομικά</string>
    <string name="hand_in_hand">Χέρι-με-χέρι</string>
    <string name="help">Βοήθεια</string>
    <string name="description">Περιγραφή</string>
    <string name="save">Αποθήκευση</string>
    <string name="one">1</string>
    <string name="add">Προσθήκη</string>
    <string name="expertise">Επάγγελμα</string>
    <string name="report_message">υβριστικό μήνυμα</string>
    <string name="report_no_reality">το προϊόν δεν υπόκειται στην πραγματικότητα</string>
    <string name="report_no_showUp">δεν εμφανίστηκε στο ραντεβού για την παράδοση του προϊόντος μου</string>
    <string name="report_deceive">εξαπάτηση (πχ. απαίτηση μεγαλύτερου ποσού, εκμετάλλευση συνάντησης για άλλους σκοπούς κτλ)</string>
    <string name="comments">Σχόλια</string>
    <string name="report_reasons">Λόγοι Αναφοράς</string>
    <string name="report_creator">Αναφορά Δημιουργού</string>
    <string name="submit">Υποβολή</string>
    <string name="evaluate_creator">Αξιολόγηση Δημιουργού</string>
    <string name="new_listing_help">Αγοράζοντας το παρόν προϊόν ο πελάτης συλλέγει τους πόντους που του προσφέρετε, και μόλις συγκεντρώσει ένα σύνολο πόντων μπορεί να επιλέξει ένα από τα δώρα που έχετε επιλέξει. Προϋπόθεση για να ορίσετε πόντους σε μία αγγελία είναι να έχετε ορίσει τουλάχιστον ένα δώρο. "</string>
    <string name="order_form">Φόρμα Παραγγελίας</string>
    <string name="delivery_courier_text">Παράδοση ταχυδρομικά</string>
    <string name="address">Οδός</string>
    <string name="address_number">Αριθμός</string>
    <string name="TK">Ταχ. κώδικας</string>
    <string name="submit_order">Υποβολή Παραγγελίας</string>
    <string name="delivery_handToHand_text">Παράδοση χέρι-με-χέρι</string>
    <string name="contact_creator">Επικοινωνήστε με τον δημιουργό</string>
    <string name="offer_location">Ο δημιουργός παρέχει παράδοση χέρι-με-χέρι στην τοποθεσία</string>
    <string name="suggested_locations">Προτεινόμενες τοποθεσίες</string>
    <string name="not_offered">(δεν προσφέρεται)</string>
    <string name="new_reward">Νέο Βραβείο</string>
    <string name="reward_name">Όνομα Βραβείου</string>
    <string name="sort">Ταξινόμηση:</string>
    <string name="search">Αναζήτηση</string>
    <string name="search_here">Αναζήτησε εδώ!</string>
    <string name="yes">Ναι</string>
    <string name="no">Όχι</string>
    <string name="remove_reward_confirm">Είστε σίγουροι ότι θέλετε να διαγράψετε το συγκεκριμένο βραβείο;</string>
    <string name="get_reward_confirm">Είστε σίγουροι ότι θέλετε να επιλέξετε το συγκεκριμένο δώρο;</string>
    <string name="signIn_warning">Για να κάνετε προσφορά στα προϊόντα πρέπει πρώτα να συνδεθείτε. Αν δεν έχετε λογαριασμό θα πρέπει να κάνετε εγγραφή.</string>
    <string name="offers_empty">Δεν έχει υποβληθεί καμία προσφορά για το συγκεκριμένο προϊόν.</string>
    <string name="accept_offer">Είστε σίγουροι ότι θέλετε να αποδεχτείτε αυτή την προσφορά;</string>
    <string name="offers_title">Προσφορές</string>
    <string name="decline_offer">Είστε σίγουροι ότι θέλετε να απορρίψετε αυτή την προσφορά;</string>
    <string name="close">Κλείσιμο</string>
    <string name="listing_photo">Φωτογραφία Αγγελίας</string>
    <string name="you_have_been_selected">Επιλεχθήκατε ως τελικός αγοραστής του προϊόντος!</string>
    <string name="continue_btn">Συνέχεια</string>
    <string name="bid">Προσφορά:</string>
    <string name="sell">Πώληση</string>
    <string name="decline">Απόρριψη</string>
    <string name="cannot_change_msg">*αν έχει ήδη υποβληθεί προσφορά δεν αλλάζει</string>
    <string name="example_bid">πχ. 50,30</string>
    <string name="notifications_empty">Δεν υπάρχουν ειδοποιήσεις.</string>
    <string name="contact_phone">Τηλέφωνο: </string>
    <string name="contact_email">Email: </string>
    <string name="shipping_address">Οδός: </string>
    <string name="shipping__number">Αριθμός: </string>
    <string name="shipping_TK">Ταχ. κώδικας: </string>
    <string name="contact_creator_warning">Χρησιμοποιήστε τα παρακάτω για να επικοινωνήσετε. Αφού πατήσετε ΟΚ θα μεταφερθείτε στην οθόνη ειδοποιήσεων, και <b>δεν θα ξαναέχετε πρόσβαση</b> στα στοιχεία αυτά.</string>
    <string name="shipping_confirm">Παρακαλώ ελέγξτε τα στοιχεία σας. Αφού πατήσετε ΟΚ θα μεταφερθείτε στην οθόνη ειδοποιήσεων, και <b>δεν θα ξαναέχετε πρόσβαση</b> στα στοιχεία αυτά.</string>
    <string name="okay">ΟΚ</string>
    <string name="refresh">Ανανέωση</string>
    <string name="auction_icon_by_icons8">Auction icon by Icons8</string>
    <string-array name="sort_options">
        <item>Ημερομηνία</item>
        <item>Τιμή</item>
        <item>Όνομα</item>
        <item>Κατηγορία</item>
    </string-array>
    <string-array name="expertise">
        <item>Ζωγράφος</item>
        <item>Ξυλουργός</item>
        <item>Πλέκτης</item>
        <item>Digital Designer</item>
        <item>Άλλο</item>
    </string-array>
    <string-array name="category">
        <item>Ρούχα</item>
        <item>Κεριά</item>
        <item>Πίνακες</item>
        <item>Καρέκλες</item>
    </string-array>
    <string-array name="location">
        <item>Καλλιθέα</item>
        <item>Πατήσια</item>
        <item>Μαρούσι</item>
    </string-array>
</resources>