<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/app_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="?attr/android:textColor"
        android:textSize="60sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintTop_toBottomOf="@id/app_title"
        android:layout_margin="30dp"
        android:hint="@string/username_en"
        android:textSize="40sp"
        android:textColor="?attr/android:textColor"
        android:inputType="text"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintTop_toBottomOf="@id/username"
        android:layout_margin="30dp"
        android:hint="@string/password_en"
        android:textSize="40sp"
        android:textColor="?attr/android:textColor"
        android:inputType="textPassword"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:backgroundTint="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="30dp"
        android:onClick="attemptLogin"/>

    <Button
        android:id="@+id/signup_creator_btn"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:text="@string/signup_creator"
        android:textSize="15sp"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:backgroundTint="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/login_btn"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="30dp"
        android:padding="0dp"/>

    <Button
        android:id="@+id/signup_customer_btn"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:text="@string/signup_customer"
        android:textSize="15sp"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:backgroundTint="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/login_btn"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="30dp"
        android:padding="0dp"
        android:onClick="openSignupCustomer"/>

    <Button
        android:id="@+id/guest_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/continue_guest"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:textColor="?attr/android:textColor"
        app:backgroundTint="@android:color/transparent"
        android:background="@null"
        style="?android:attr/borderlessButtonStyle"
        app:layout_constraintTop_toBottomOf="@id/signup_creator_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="30dp"
        android:padding="0dp"
        android:onClick="openMain"/>


</androidx.constraintlayout.widget.ConstraintLayout>