<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CustomerProfile">

    <include layout="@layout/app_bar"/>

<!--    <RelativeLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content">-->
        <LinearLayout
            android:id="@+id/profile_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.stelladk.arclib.ArcLayout
                android:id="@+id/profile_photo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="30dp"
                app:ArcType="inner"
                app:ArcRadius="75dp"
                android:background="@drawable/karen"
                android:contentDescription="@string/photo_profile"/>

            <LinearLayout
                android:id="@+id/profile_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/fullname"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/fullname"
                    android:textSize="35sp"
                    android:textColor="?android:attr/textColor"/>
                <TextView
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/username_en"
                    android:textSize="20sp"
                    android:textColor="?android:attr/textColor"/>
                <TextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/email"
                    android:textSize="25sp"
                    android:textColor="?android:attr/textColor"/>
                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxHeight="100dp"
                    android:gravity="center"
                    android:text="@string/description"
                    android:textSize="20sp"
                    android:textColor="?android:attr/textColor"
                    android:maxLines="4"/>
            </LinearLayout>
        </LinearLayout>

    <TextView
        android:id="@+id/reviews_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/evaluations"
        android:textSize="30sp"
        android:textColor="?android:attr/textColor"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/reviews_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"/>

<!--    </RelativeLayout>-->
</LinearLayout>